--- a/utilts.css
+++ b/utilts.css
@@ -59,7 +59,7 @@
 
 .parag p{
     font-size: 20px;
-    font-family: cursive;
+    font-family: normal;
     margin: 30px;
 }
 
@@ -106,7 +106,7 @@ Our Min2
 
 .parag2 p{
     font-size: 20px;
-    font-family: cursive;
+    font-family: normal;
     margin: 30px;
 }
 
@@ -161,7 +161,7 @@ Our Min3
 
 .parag3 p{
     font-size: 20px;
-    font-family: cursive;
+    font-family: normal;
     margin: 30px;
 }
 
@@ -209,7 +209,7 @@ Our Min4
 
 .parag4 p{
     font-size: 20px;
-    font-family: cursive;
+    font-family: normal;
     margin: 30px;
 }
 
@@ -264,7 +264,7 @@ Our Min5
 
 .parag5 p{
     font-size: 20px;
-    font-family: cursive;
+    font-family: normal;
     margin: 30px;
 }
 
